@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 set -e
 
@@ -33,8 +33,18 @@ if [ -z "$SPARK_HOME" ]; then
   exit 1
 fi
 
+if [ ! -d "$SPARK_HOME" ]; then
+  echo "SPARK_HOME doesn't exist: $SPARK_HOME, exiting"
+  exit 1
+fi
+
 if [ -z "$SPARK_CONF_DIR" ]; then
   SPARK_CONF_DIR=$SPARK_HOME/conf
+fi
+
+if [ ! -d "$SPARK_CONF_DIR" ]; then
+  echo "SPARK_CONF_DIR doesn't exist: $SPARK_CONF_DIR, exiting"
+  exit 1
 fi
 
 if [ -z "$LOG_DIR" ]; then
@@ -46,8 +56,16 @@ mkdir -p $LOG_DIR
 LOGGING_OPTS="-Dlog4j.configuration=file:$appdir/log4j-server.properties
               -DLOG_DIR=$LOG_DIR"
 
+if [ -z "$JMX_PORT" ]; then
+    JMX_PORT=9999
+    echo "JMX_PORT empty, using default $JMX_PORT"
+fi
+
 # For Mesos
-CONFIG_OVERRIDES="-Dspark.executor.uri=$SPARK_EXECUTOR_URI "
+CONFIG_OVERRIDES=""
+if [ -n "$SPARK_EXECUTOR_URI" ]; then
+  CONFIG_OVERRIDES="-Dspark.executor.uri=$SPARK_EXECUTOR_URI "
+fi
 # For Mesos/Marathon, use the passed-in port
 if [ "$PORT" != "" ]; then
   CONFIG_OVERRIDES+="-Dspark.jobserver.port=$PORT "
@@ -69,3 +87,26 @@ fi
 export SPARK_HOME
 export YARN_CONF_DIR
 export HADOOP_CONF_DIR
+
+GC_OPTS_BASE="-XX:+UseConcMarkSweepGC
+         -verbose:gc -XX:+PrintGCTimeStamps
+         -XX:MaxPermSize=512m
+         -XX:+CMSClassUnloadingEnabled "
+
+JAVA_OPTS_BASE="-XX:MaxDirectMemorySize=$MAX_DIRECT_MEMORY
+         -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true"
+
+GC_OUT_FILE_NAME="gc.out"
+
+# To truly enable JMX in AWS and other containerized environments, also need to set
+# -Djava.rmi.server.hostname equal to the hostname in that environment.  This is specific
+# depending on AWS vs GCE etc.
+JAVA_OPTS_SERVER="${JAVA_OPTS_BASE} \
+          -Dcom.sun.management.jmxremote.port=$JMX_PORT \
+          -Dcom.sun.management.jmxremote.rmi.port=$JMX_PORT \
+          -Dcom.sun.management.jmxremote.authenticate=false \
+          -Dcom.sun.management.jmxremote.ssl=false"
+
+: ${MANAGER_JAR_FILE:="file:$appdir/spark-job-server.jar"}
+: ${MANAGER_CONF_FILE:="file:$conffile"}
+: ${MANAGER_LOGGING_OPTS:="-Dlog4j.configuration=file:$appdir/log4j-server.properties"}
